proyecto fase2 y fase3/Kubenetes/Practica-kubernetes-2/Grpc-Pod-kafka/ingressKafka100.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-kafka
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: colas.sop-es-sergio.online 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-grpc-kafka
            port:
              number: 2000
